src/test/deca/context/invalid/class_utilisation_champ_type_non_approprie_float_int.deca
//  Description : 
// 
//      Test incorrect qui utilise une classe et instancie un objet égal à un int
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03

class A {
    int x;

}

{
    A oA= new A();
    oA.x=3.5;
}